# curling_detect

./: CMakeLists.txt  README.md  package.xml
backups/: curling_detect_withoutKF.cpp  depth_make.cpp  depth_make_v1.0.cpp  depth_make_v1.1.cpp  echo_cluster.cpp  euclidean_cluster.cpp  plane_segment.cpp  stone_detection.cpp
config/: curling.rviz  curling_32.rviz  curling_64.rviz  curling_pandar64.rviz  kalman.rviz  prompt_graph.rviz
data/: hex.pcd  hex_filtered.pcd
data/pcdData/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_10.pcd  cloud_cluster_11.pcd  cloud_cluster_12.pcd  cloud_cluster_13.pcd  cloud_cluster_14.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cloud_cluster_7.pcd  cloud_cluster_8.pcd  cloud_cluster_9.pcd
include/depth_make/: make_pointxyzitr.h
include/kf_filter/: kalman.cpp  kalman.h
launch/: lidar_calibration.launch  lidar_client.launch  run_detect_system.launch  socket_control.launch
records/logs/: 2023-02-13-10-03-55.txt  2023-02-13-10-10-41.txt  2023-02-13-10-18-01.txt  2023-02-13-10-23-26.txt  2023-02-13-10-25-22.txt  2023-02-13-10-26-47.txt  2023-02-13-10-29-13.txt  2023-02-13-10-39-45.txt  2023-02-13-10-43-49.txt  2023-02-13-10-49-48.txt  2023-02-13-10-51-26.txt  2023-02-13-11-00-42.txt  2023-02-13-11-05-06.txt  2023-02-13-11-09-54.txt  2023-02-13-11-11-51.txt  2023-02-13-11-15-17.txt  2023-02-13-11-17-21.txt  2023-02-13-11-23-20.txt  2023-02-13-11-34-53.txt  2023-02-13-13-52-54.txt  2023-02-13-13-57-08.txt  2023-02-13-14-05-42.txt  2023-02-13-14-14-10.txt  2023-02-13-14-33-01.txt  Test.txt
records/logs/2023-02-11/: 2023-02-11-18-48-14.txt  2023-02-11-18-51-56.txt  2023-02-11-18-56-34.txt  2023-02-11-18-59-45.txt  2023-02-11-22-38-11.txt  2023-02-11-22-52-42.txt  2023-02-11-22-57-24.txt  2023-02-11-23-01-42.txt  2023-02-11-23-06-37.txt  2023-02-11-23-10-24.txt  2023-02-11-23-17-29.txt  2023-02-11-23-21-28.txt  2023-02-11-23-38-33.txt  2023-02-11-23-43-22.txt  2023-02-11-23-47-48.txt  2023-02-11-23-52-26.txt  2023-02-11-23-58-00.txt  2023-02-12-00-03-02.txt  2023-02-12-00-06-11.txt  2023-02-12-00-12-39.txt  2023-02-12-00-17-55.txt  2023-02-12-00-22-43.txt  2023-02-12-00-27-10.txt  2023-02-12-00-33-18.txt  2023-02-12-00-38-08.txt  2023-02-12-00-43-10.txt  2023-02-12-00-48-20.txt
records/logs/2023-02-13/: 2023-02-13-09-38-37.txt  2023-02-13-09-53-36.txt  2023-02-13-09-58-52.txt  2023-02-13-10-20-03.txt  2023-02-13-10-21-34.txt  2023-02-13-10-30-54.txt  2023-02-13-10-38-00.txt  2023-02-13-10-45-59.txt  2023-02-13-10-53-53.txt  2023-02-13-10-55-48.txt  2023-02-13-10-58-45.txt  (+14 more)
records/rosbags/: 2023-02-05-17:03:50-CST+0800.bag  2023-02-05-17:03:50-CST+0800.orig.bag  2023-02-06-16:31:48-CST+0800.bag  2023-02-06-16:31:48-CST+0800.orig.bag  Sun-Feb--5-04:23:28-2023.bag
scripts/: get_frame_id.py  log_path.py  record_pc2.py  udp_client.py  udp_get_path.py  udp_get_pose.py  udp_receive_command.py  udp_receive_path.py  udp_send_path.py
src/: curling_detect.cpp  curling_detect_withFK.cpp  kalman_test.cpp  lidar_calibration.cpp  lidar_calibration_cylinder.cpp  prompt_graph.cpp  temp.txt
(+80 files in other folders)
